autorisations dans vigimap
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2956 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -57,7 +57,15 @@
 
 
     <div id="header">
-        <h1><a href="${tg.url('/edit')}">VigiMap ${l_("(edit mode)")}<span id="maptitle"></span></a></h1>
+        <div class="header_item">
+            <a href="${tg.url('/logout_handler')}">
+                <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
+            </a>
+        </div>
+        <h1>
+            <a href="${tg.url('/edit')}">VigiMap ${l_("(edit mode)")}<span id="maptitle"></span></a>
+        </h1>
+                    
     </div>
 
     <div id="menu">
