--- a/src/vigilo/themes/templates/vigimap/index.html
+++ b/src/vigilo/themes/templates/vigimap/index.html
@@ -41,6 +41,11 @@
 
 
     <div id="header">
+        <div class="header_item">
+            <a href="${tg.url('/logout_handler')}">
+                <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
+            </a>
+        </div>
         <h1><a href="${tg.url('/')}">VigiMap<span id="maptitle"></span></a></h1>
     </div>
 
