--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -15,6 +15,10 @@ h1 {
     background: url("../images/vigilo.png") no-repeat left top;
     text-shadow: 0.1em 0.1em 0.2em #ccc;
 }
+.header_item {
+        float: right;	
+}
+
 ul {
     margin: 0.5em 0 0 2em;
     list-style-type: disc;
