--- a/src/vigilo/themes/templates/vigimap/index.html
+++ b/src/vigilo/themes/templates/vigimap/index.html
@@ -41,10 +41,8 @@
 
 
     <div id="header">
-        <div class="header_item">
-            <a href="${tg.url('/logout_handler')}">
-                <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
-            </a>
+        <div id="loginbtn" class="logout">
+            <a href="${tg.url('/logout_handler')}">Logout</a>
         </div>
         <h1><a href="${tg.url('/')}">VigiMap<span id="maptitle"></span></a></h1>
     </div>
