Ajout d'un lien vers l'aide/doc dans chaque application. Uniformisation de la barre située tout en haut dans VigiBoard/Map/Graph.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3008 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/classical.css
+++ b/src/vigilo/themes/public/vigiboard/css/classical.css
@@ -1,6 +1,11 @@
-.toolbar {
-	border: solid 0px black;
-	background-color: #F0F1F5;
+#header {
+    border: solid 0px black;
+    background-color: #F0F1F5;
+}
+
+.header_select {
+    background-color: #DBEAF5;
+    border: 1px solid #4682B4;
 }
 
 .plugins th {
@@ -74,10 +79,5 @@ a {
 
 .fielderror {
     color: red;
-}
-
-.toolbar_select {
-	background-color: #DBEAF5;
-	border: 1px solid #4682B4;
 }
 
