--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -1,8 +1,3 @@
-body {
-    margin: 0;
-    padding: 0;
-}
-
 #header {
     border-bottom: 1px solid #a4a4a4;
     height: 24px;
@@ -10,33 +5,23 @@ body {
     margin: 0;
     padding: 0.1em 0;
 }
-h1 {
-    font-size: 110%;
-    margin: 0 0.2em 0 0.2em;
-    text-align: center;
-    font-family: sans-serif;
-    background: url("../images/vigilo.png") no-repeat left top;
-    text-shadow: 0.1em 0.1em 0.2em #ccc;
-}
-#loginbtn.logout {
+
+.header_item {
     float: right;
-    margin-right: 5px;
-}
-#loginbtn.logout a {
-    padding: 2px 0 2px 26px;
-    background-image: url("../images/logout.png");
-    background-repeat: no-repeat;
-    color: #314455;
-    height: 24px;
-    display: block;
-    font-size: 11px;
-    text-decoration: none;
-    vertical-align: middle;
-}
-#loginbtn.logout a:hover {
-    text-decoration: underline;
 }
 
+#logo {
+    margin: 0.2em;
+    float: left;
+}
+
+h1 {
+    font-size: 110%;
+    margin: 0 0.2em 0 -58px;
+    text-align: center;
+    font-family: sans-serif;
+    text-shadow: 0.1em 0.1em 0.2em #ccc;
+}
 
 ul {
     margin: 0.5em 0 0 2em;
