--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -12,6 +12,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="content-type" py:replace="''"/>
     <title py:replace="''">Your title goes here</title>
     <meta py:replace="select('*')"/>
+    <style type="text/css">@import "${tg.url('css/reset.css')}";</style>
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/jxlib/jxtheme.uncompressed.css')}" />
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/Autocompleter/Autocompleter.css')}" />
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/common_events.css')}" />
