--- a/src/vigilo/themes/templates/vigigraph/searchhostform.html
+++ b/src/vigilo/themes/templates/vigigraph/searchhostform.html
@@ -5,13 +5,13 @@
       xmlns:xi="http://www.w3.org/2001/XInclude">
 <xi:include href="master.html" />
 <head>
-    <title>Vigigraph search</title>
+    <title>VigiGraph search</title>
 </head>
 <body>
     <div xmlns:py="http://genshi.edgewall.org/">
-            <h1>Vigigraph search</h1>
+            <h1>VigiGraph search</h1>
             <form method="get" action="searchHost">
-            <p>Device: <input type="text" name="query" />
+            <p>Host: <input type="text" name="query" />
             <input type="submit" value="Search" />
             </p>
             </form>
