--- a/src/vigilo/themes/templates/vigigraph/main.html
+++ b/src/vigilo/themes/templates/vigigraph/main.html
@@ -15,17 +15,29 @@
 </head>
 
 <body py:match="body" py:attrs="select('@*')">
-    <div class="header">
-        <ul id="mainmenu">
-            <li class="first"><a href="${tg.url('/')}"><img class="logo" 
-                src="${tg.url('/images/vigilo.png')}" alt="Vigilo"/></a><span id="version">v2.0</span></li>
-            <span py:if="tg.auth_stack_enabled" py:strip="True">
-            <li py:if="not request.identity" id="loginbtn" class="loginlogout login"><a href="${tg.url('/login')}">Login</a></li>
-            <li py:if="request.identity" id="loginbtn" class="loginlogout logout"><a href="${tg.url('/logout_handler')}"> Logout</a></li>
-            </span>
-            <li class="loginlogout"><a id="print" href="">Print all visible graphs</a></li>
-        </ul>
+    <div id="header">
+        <span id="logo">
+            <a href="${tg.url(tg.config.get('logo_link', '/'))}">
+                <img alt="" src="${tg.url('/images/vigilo.png')}"/>
+            </a>
+        </span>
+
+        <div class="header_item">
+            <a id="print" href="?">
+                <img src="${tg.url('/resource/qx/icon/Nuvola/22/actions/document-print.png')}"
+                    alt="Print all" title="Print all visible graphs" />
+            </a>
+            <a href="${tg.config['help_link']}">
+                <img src="${tg.url('/images/help.png')}" alt="Help" title="Help"/>
+            </a>
+            <a href="${tg.url('/logout_handler')}">
+                <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
+            </a>
+        </div>
+
+        <h1><a href="${tg.url('/')}">VigiGraph</a></h1>
     </div>
+
     <div id="content">
         <py:with vars="flash=tg.flash_obj.render('flash', use_js=False)">
             <div py:if="flash" py:content="XML(flash)" />
