* Factorisation de code    * dans les templates HTML    * dans le javascript  * Chargement direct des cartes lors d'un clic dans le menu de gauche  * Gestion de la carte affichée dans l'URL par l'ancre plutôt que par la query string
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3012 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -57,10 +57,11 @@ h1 a:hover {
 #loading {
     display: none;
     position: absolute;
-    top: 1px;
+    top: 60px;
     right: 5px;
     background-color: white;
-    /*border: 1px solid gray;*/
+    padding: 2px;
+    border: 1px solid gray;
 }
 #loading img {
     display: block;
