--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -122,7 +122,7 @@ h1 a:hover {
     border: 2px solid blue !important;
 }
 #mapitems .mapitem.selected:hover {
-    color: auto;
+    color: inherit;
     cursor: default;
 }
 
