Ajout d'une sélection similaire à celle engendrée par le menu de détails lorsque l'on édite un événement. Amélioration de la multi-sélection pour prendre en compte les changements de sélection en temps réel.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3042 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/plugins/details.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/details.html
@@ -73,9 +73,7 @@ window.addEvent("domready", function () {
     window.details_dialog.toggleCollapse();
 
     function remove_selection() {
-        $$$$('.selectedRow').each(function (sel) {
-            sel.removeClass('selectedRow');
-        });
+        $$$$('.selectedRow').removeClass('selectedRow');
     }
 
     window.details_dialog.addEvent('close', remove_selection);
@@ -117,7 +115,7 @@ window.addEvent("domready", function () {
             });
             window.details_dialog.options.parent = item;
             // Permet d'afficher l'événement sélectionné autrement.
-            item.getParent().getParent().addClass('selectedRow');
+            item.getParent('tr').addClass('selectedRow');
             window.details_dialog.open.bind(window.details_dialog)();
             window.details_dialog.setBusy(true);
             req.post({plugin_name: '${name}', idcorrevent: idd});
