Chargement des cartes par le fragment d'URL : oubli
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3046 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/node.html
+++ b/src/vigilo/themes/templates/vigimap/node.html
@@ -12,7 +12,8 @@
     </ul>
     <ul class="maps">
         <li py:for="map in maps">
-            <a href="index?mapid=${map[0]}" > ${map[1]}</a>
+            <a href="" onclick="map.load(${map[0]}); return false;" > ${map[1]}</a>
+            <!-- <a href="javascript:map.load(${map[0]}); return false;" > ${map[1]}</a> --> <!-- lequel est le plus standard ? -->
         </li>
     </ul>
     <py:choose test="">
