Amélioration de l'affichage du panneau de détails
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3074 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -252,19 +252,32 @@ h1 a:hover {
     margin: 1em 0 1em 2em;
 }
 
-#details ul.maps li a {
-    vertical-align: middle;
-    height: 16px;
-    padding-left: 18px;
-    background: url(../images/submap.png) no-repeat center left;
-}
-
 #details h2 {
     text-align: center;
 }
 
 #details p span.label {
     font-weight: bold;
+}
+
+#details ul.maps {
+    list-style-type: none;
+}
+#details ul.maps li a {
+    vertical-align: middle;
+    height: 16px;
+    padding-left: 18px;
+    background: url(../images/map.png) no-repeat center left;
+}
+
+#details ul.links {
+    list-style-type: none;
+}
+#details ul.links li a {
+    vertical-align: middle;
+    height: 16px;
+    padding-left: 18px;
+    background: url(../images/external-link.png) no-repeat center left;
 }
 
 
