Correction du bug client #32140 : L'état des hôtes n'apparaît pas correctement dans VigiBoard (pas d'icônes ni de couleurs).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3079 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/classical.css
+++ b/src/vigilo/themes/public/vigiboard/css/classical.css
@@ -34,7 +34,8 @@ tr.even {
 	background-color: #F0F0F0;
 }
 
-td.OK {
+td.OK,
+td.UP {
     background-color: #73DE78;
 }
 
@@ -42,7 +43,8 @@ td.WARNING {
 	background-color: #FFFF00;
 }
 
-td.CRITICAL {
+td.CRITICAL,
+td.DOWN {
 	background-color: #FF0000;
 }
 
@@ -50,11 +52,13 @@ td.WARNING_Ack {
 	background-color: #FCFCA2;
 }
 
-td.CRITICAL_Ack {
+td.CRITICAL_Ack,
+td.DOWN_Ack {
 	background-color: #FC9090;
 }
 
-td.OK_Ack {
+td.OK_Ack,
+td.UP_Ack {
 	background-color: #A9EBAC;
 }
 
