--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -274,6 +274,11 @@ h1 a:hover {
 #details ul.section li a {
     height: 16px;
     padding-left: 20px;
+    color: black;
+    text-decoration: none;
+}
+#details ul.section li a:hover {
+    text-decoration: underline;
 }
 
 #details ul.maps li a {
