Mise à jour des templates de VigiGraph pour pallier à l'intégration de RRDGraph dans VigiRRD.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3094 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigigraph/fullhostpage.html
+++ b/src/vigilo/themes/templates/vigigraph/fullhostpage.html
@@ -16,7 +16,7 @@
         <br />
         <div py:for="graph in graphs" py:strip="True">
             <a href="singleGraph?host=${host};graph=${graph.name};start=${start};duration=${duration}">
-            <img src="${tg.url('/rrdgraph/%(host)s/rrdgraph.py?graphtemplate=%(graph)s&amp;start=%(start)d&amp;duration=%(duration)d&amp;direct=1&amp;details=0&amp;host=%(host)s' % {
+            <img src="${tg.url('/rrdgraph/%(host)s/index?graphtemplate=%(graph)s&amp;start=%(start)d&amp;duration=%(duration)d&amp;direct=1&amp;details=0&amp;host=%(host)s' % {
                 'host': host,
                 'graph': graph.name,
                 'start': start,
