Modification du template et des styles de la légende de VigiMap en vue d'intégrer un résumé dedans.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3132 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -353,9 +353,10 @@ canvas {
 #legend dl dt {
     display: block;
     float: left;
-    width: 1em;
+    width: 2em;
     height: 1em;
     margin-right: 0.5em;
+    text-align: center;
 }
 
 .saving {
