Modification du template de la légende dans VigiMap pour permettre l'intégration des liens au résumé.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3145 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/legend.html
+++ b/src/vigilo/themes/templates/vigimap/legend.html
@@ -5,7 +5,7 @@
             Le span sera complété avec le nombre total
             d'éléments (entre parenthèses).
         -->
-        <h3>${l_("Elements")} <span></span>:</h3>
+        <h3>${l_("Elements")} <span></span></h3>
         <dl>
             <dt class="status-unknown"></dt>
                 <dd>${l_("Unknown")}</dd>
@@ -18,7 +18,11 @@
         </dl>
     </div>
     <div id="legend-links" py:if="has_link">
-        <h3>${l_("Links")}&nbsp;:</h3>
+        <!--!
+            Le span sera complété avec le nombre total
+            d'éléments (entre parenthèses).
+        -->
+        <h3>${l_("Links")} <span></span></h3>
         <dl>
             <div py:for="i, link in enumerate(links)" py:strip="True">
                 <div py:choose="" py:strip="True">
