--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -261,6 +261,7 @@ h1 a:hover {
     border-top: 1px solid black;
     margin-top: 0.5em;
     padding-top: 0.2em;
+    font-family: sans-serif;
 }
 
 #details p span.label {
@@ -357,6 +358,16 @@ canvas {
     height: 1em;
     margin-right: 0.5em;
     text-align: center;
+}
+
+
+/*
+ * Mode édition
+ */
+
+.jxDialogContent label {
+    font-family: sans-serif;
+    font-size: 90%;
 }
 
 .saving {
